--- a/src/Weather.css
+++ b/src/Weather.css
@@ -85,9 +85,6 @@ body {
     padding-bottom: 20px;
     max-width: 75%;
   }
-  .description {
-    text-transform: capitalize;
-  }
   .card-title {
     font-size: 40px;
   }
@@ -134,11 +131,11 @@ body {
     opacity: 0.5;
   }
   .city {
-    font-size: 22px;
+    font-size: 17px;
     font-weight: 400;
   }
   .temp {
-    font-size: 40px;
+    font-size: 35px;
     font-weight: bold;
     line-height: 40px;
     margin-top: 6px;
@@ -146,7 +143,8 @@ body {
     vertical-align: top;
   }
   .units {
-    line-height: 24px;
+    line-height: 26px;
     vertical-align: top;
-    font-size: 20px;
+    font-size: 15px;
+    margin-left: 5px;
   }
