--- a/src/Weather.css
+++ b/src/Weather.css
@@ -123,23 +123,27 @@ body {
     font-size: 14px;
     text-align: center;
   }
-  img {
+  canvas {
     display: block;
     margin: 0 auto;
+    color: #212529;
+    margin-top: 6px;
+    margin-bottom: 5px;
   }
   .temp-max {
     opacity: 0.5;
   }
   .city {
-    font-size: 17px;
+    font-size: 25px;
+    font-weight: bold;
     font-weight: 400;
   }
   .temp {
     font-size: 35px;
     font-weight: bold;
-    line-height: 40px;
+    line-height: 39px;
     margin-top: 6px;
-    padding-left: 6px;
+    padding-left: 5px;
     vertical-align: top;
   }
   .units {
