--- a/src/Weather.css
+++ b/src/Weather.css
@@ -146,9 +146,12 @@ body {
     padding-left: 5px;
     vertical-align: top;
   }
-  .units {
+  a .units {
     line-height: 26px;
     vertical-align: top;
     font-size: 15px;
     margin-left: 5px;
+  }
+  a .units:hover {
+    text-decoration: none;
   }
