--- a/src/Weather.css
+++ b/src/Weather.css
@@ -25,7 +25,7 @@ body {
   @media (max-width: 575.98px) {
     .input-group {
       width: 100%;
-      margin-left: 30px;
+      margin-left: 18px;
     }
   }
   @media (min-width: 575.98px) {
@@ -39,7 +39,7 @@ body {
       align-content: space-evenly;
       gap: 5px;
       align-items: first baseline; 
-      width: 85%;
+      width: 100%;
   }
   .input-group-append {
     display: flex;
@@ -51,15 +51,6 @@ body {
   .form-control {
     border: 1px solid #347474 !important;
     box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
-  }
-  .btn-outline-secondary.second {
-    background-color: white;
-    border: 1px solid #347474 !important;
-    box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
-  }
-  .btn-outline-secondary.second:hover {
-    background-color: #347474;
-    transition: all 200ms ease-in-out;
   }
   .btn-outline-secondary.primary {
     background-color: white;
@@ -79,14 +70,10 @@ body {
     margin: 0 auto;
   }
   .square {
-    display: table;
     text-align: left;
     margin: 0 auto;
     margin-top: 5px;
-    line-height: 35px;
-    padding-inline-end: 0;
-    padding: 15px;
-    max-width: 85%;
+    line-height: 40px;
   }
   .card-title {
     font-size: 40px;
@@ -117,6 +104,7 @@ body {
   }
   .border-light {
     text-align: center;
+    border: none !important;
   }
   .card-header {
   font-size: 16px; 
@@ -136,7 +124,7 @@ body {
   }
   .description {
     display: table;
-    margin-right: auto;
+    margin-left: -6px;
   }
   .temp-max {
     opacity: 0.5;
